<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    android:fitsSystemWindows="true">

    <!-- Dialog Title -->
    <TextView
        android:id="@+id/dialog_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/element_spacing_normal"
        />

    <!-- Dialog Instructions -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_instructions"
        android:textSize="@dimen/text_size_body"
        android:textStyle="normal"
        android:layout_marginBottom="@dimen/element_spacing_normal"
        />

    <!-- Dialog Email / Username -->
    <EditText
        android:id="@+id/forgot_email_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_address"
        android:textStyle="italic"
        android:textSize="@dimen/text_size_body"
        android:minHeight="@dimen/touch_target_min_height"
        android:inputType="textEmailAddress"
        />

</LinearLayout>